# aiImageCaption

./: .gitignore  README.md  aiImageCaption.py  aiImageCaption.spec  aiImageCaptionPNG.py  heifTest.py  main.py  pyproject.toml
images/: IMG_4167.HEIC
images/sub01/: IMG_4171.HEIC
